force-app/main/default/objects/SaleServiceItem__c/SaleServiceItem__c.object-meta.xml
<CustomObject>
    <description>Oggetto giunzione tra opportunity/quote e Service point</description>
    <label>Sale Service Item</label>
    <nameField>
        <label>SaleServiceItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sale Service Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>