force-app/main/default/objects/SaleServiceItem__c/fields/ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>ServicePoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Point</label>
    <referenceTo>ServicePoint__c</referenceTo>
    <relationshipLabel>Sale Service Items</relationshipLabel>
    <relationshipName>SaleServiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>