force-app/main/default/objects/SaleServiceItem__c/fields/SupplyAddress__c.field-meta.xml
<CustomField>
    <fullName>SupplyAddress__c</fullName>
    <formula>ServicePoint__r.SupplyAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirizzo Fornitura</label>
    <type>Text</type>
</CustomField>